# goit-pythonweb-hw-12

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 51ab765a942e_add_user.py  5202945c787d_add_user_roles.py  92dd7ecd0faa_init.py  ac6aa0c0dc4d_add_to_model_user_filed_confirmed.py
docs/: conf.py  index.rst
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_unit_repository_contacts.py
