[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = ["Artur Prepelytsia <preart81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.6" }
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = { extras = ["email"], version = "^2.10.5" }
libgravatar = "^1.0.4"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic-settings = "^2.7.1"
fastapi-mail = "^1.4.2"
slowapi = "^0.1.9"
cloudinary = "^1.42.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
aiosqlite = "^0.20.0"
pytest-cov = "^6.0.0"
redis = "^5.2.1"
redis-lru = "^0.1.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = ["src/services/upload_file.py", "src/api/utils.py", "src/database/db.py"]
